feat: support partial search radars
